compiler/tests/ar/errors/pure_global_write_ar.salam
// لغة: العربية
// EXPECT: E013
متغير مجموع صحيح٣٢ = 0

نقي دالة زد(x صحيح٣٢) صحيح٣٢:
    مجموع = مجموع + x
    أرجع مجموع
نهاية

دالة الرئيسية:
    اطبع(زد(2))
نهاية
